main to dev (#33)
* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard application message

* Fix the API desc for OpenAPI doc

* Added list presence endpoints

* Added product data endpoints (#4)

* Added qsur data endpoint. (#6)

* main to dev (#7)

* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard application message

* Fix the API desc for OpenAPI doc

* Added list presence endpoints

* Added product data endpoints (#4)

* Added qsur data endpoint. (#6)

* main to dev (#7) (#8)

* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard application message

* Fix the API desc for OpenAPI doc

* Added list presence endpoints

* Added product data endpoints (#4)

* Added qsur data endpoint. (#6)

* Upgraded to Spring boot 3 #9

* merging main to dev  (#10)

* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard application message

* Fix the API desc for OpenAPI doc

* Added list presence endpoints

* Added product data endpoints (#4)

* Added qsur data endpoint. (#6)

* main to dev (#7) (#8)

* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard application message

* Fix the API desc for OpenAPI doc

* Added list presence endpoints

* Added product data endpoints (#4)

* Added qsur data endpoint. (#6)

* Upgraded to Spring boot 3 #9

* merging main to dev  (#10) (#11)

* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard application message

* Fix the API desc for OpenAPI doc

* Added list presence endpoints

* Added product data endpoints (#4)

* Added qsur data endpoint. (#6)

* main to dev (#7) (#8)

* Initial comment

* Initial comment

* Implemented functional-use endpoints

* Added standard applicat