@@ -1,25 +1,30 @@
 package gov.epa.ccte.api.exposure.security;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import gov.epa.ccte.api.exposure.domain.ApiKey;
-import gov.epa.ccte.api.exposure.repository.ApiKeyRepository;
 import gov.epa.ccte.api.exposure.web.rest.error.AuthorizationProblem;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.GenericFilterBean;
 
-import javax.servlet.FilterChain;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -28,62 +33,132 @@ import java.util.concurrent.ConcurrentHashMap;
 @Component
 public class ApiKeyRequestFilter extends GenericFilterBean {
 
-    private ConcurrentHashMap<UUID, String> keyStore;// = new ConcurrentHashMap();
-
+    private final ConcurrentHashMap<UUID, String> keyStore;// = new ConcurrentHashMap();
+    private final ConcurrentHashMap<String, String> approvedOriginStore;// = new ConcurrentHashMap();
     private final ObjectMapper mapper = new ObjectMapper();
     private final String keyName;
 
-    public ApiKeyRequestFilter(ApiKeyRepository repository, @Value("${application.api-key-name}") String keyName) {
+    public ApiKeyRequestFilter(ConcurrentHashMap<UUID, String> keyStore,
+                               ConcurrentHashMap<String, String> approvedOriginStore,
+                               @Value("${application.api-key-name}") String keyName) {
+        this.keyStore = keyStore;
+        this.approvedOriginStore = approvedOriginStore;
         this.keyName = keyName;
 
-        initializeKeyStore(repository);
+        //initializeKeyStore(repository);
+        //initializeApprovedOriginStore();
     }
 
-    private void initializeKeyStore(ApiKeyRepository repository) {
-        keyStore = new ConcurrentHashMap<>();
+//    private void initializeApprovedOriginStore() {
+//        approvedOriginStore = new ConcurrentHashMap<>();
+//        approvedOriginStore.put("http://localhost:3003", "http://localhost:3003");
+//        approvedOriginStore.put("http://localhost:8888", "http://localhost:8888");
+//        approvedOriginStore.put("https://ccte-ccd-dev.epa.gov", "https://ccte-ccd-dev.epa.gov");
+//        approvedOriginStore.put("https://ccte-ccd-stg.epa.gov", "https://ccte-ccd-stg.epa.gov");
+//        approvedOriginStore.put("https://ccte-ccd-prod.epa.gov", "https://ccte-ccd-prod.epa.gov");
+//        approvedOriginStore.put("https://comptox.epa.gov", "https://comptox.epa.gov");
+//        approvedOriginStore.put("https://ccte-api-s.app.cloud.gov", "https://ccte-api-s.app.cloud.gov");
+//    }
 
-        List<ApiKey> keys = repository.findAll();
-
-        for(ApiKey key : keys)
-            keyStore.put(key.getId(), key.getEmail());
-
-        log.info("*** {} keys are loaded. *** ", keys.size());
-    }
+//    private void initializeKeyStore(ApiKeyRepository repository) {
+//        keyStore = new ConcurrentHashMap<>();
+//
+//        List<ApiKey> keys = repository.findAll();
+//
+//        for(ApiKey key : keys)
+//            keyStore.put(key.getId(), key.getEmail());
+//
+//        log.info("*** {} keys are loaded. *** ", keys.size());
+//    }
 
     @Override
     public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain) throws IOException, ServletException {
+
+        log.info("*** checking the API key ***");
+
+        // dump the request headers
+        log.info("*** request headers ***");
+//        Enumeration<String> headerNames = ((HttpServletRequest) servletRequest).getHeaderNames();
+//
+//        if (headerNames != null) {
+//            while (headerNames.hasMoreElements()) {
+//                String header = headerNames.nextElement();
+//                log.info("Header: {} = {}", header, ((HttpServletRequest) servletRequest).getHeader(header));
+//            }
+//        }
+
         HttpServletRequest req = (HttpServletRequest) servletRequest;
-        String path = req.getRequestURI();
 
 //        if(path.startsWith("/api") == false){
 //            filterChain.doFilter(servletRequest, servletResponse);
 //            return;
 //        }
 
-        // get from header
+        //
+        if(shouldCheckApiKey(req)) {
+            log.info("*** API key check is checking ***");
+            //String headers = String.valueOf(req.getHeaderNames());
+            String key = getApiKeyfromHttpHeader(req.getHeader(keyName));
 
-        String key = getApiKeyfromHttpHeader(req.getHeader(keyName));
+            // In case user is provided api key through parameter x-api-key
+            if (key == null || key.isEmpty()) {
+                // get key from the URL parameter
+                key = getApiKeyFromQueryParam(req.getQueryString());
+            }
 
-        // In case user is provided api key through parameter x-api-key
-        if(key == null || key.equals("")){
-            // get key from the URL parameter
-            key = getApiKeyFromQueryParam(req.getQueryString());
-        }
-
-        if(key == null || key.equals("")){
-            // api key is missing
-            returnErrorMsg(servletResponse, key);
-        } else if(isKeyExist(key)){
-            // api key found
-            filterChain.doFilter(servletRequest, servletResponse);
+            if (key == null || key.isEmpty()) {
+                // api key is missing
+                returnErrorMsg(servletResponse, key);
+            } else if (isKeyExist(key)) {
+                // api key found
+                filterChain.doFilter(servletRequest, servletResponse);
+            } else {
+                // api doesn't match
+                returnErrorMsg(servletResponse, key);
+                log.info("*** API key {} not recognized *** ", key);
+            }
         }else{
-            // api doesn't match
-            returnErrorMsg(servletResponse, key);
-            log.info("*** API key {} not recognized *** ", key);
+            log.info("*** API key check is skipped ***");
+            filterChain.doFilter(servletRequest, servletResponse);
         }
     }
 
-    private String getApiKeyFromQueryParam(String query) throws UnsupportedEncodingException {
+    private boolean shouldCheckApiKey(HttpServletRequest req) {
+        // check if request has method OPTIONS or remote is localhost
+        String method = req.getMethod();    // OPTIONS
+        String origin = Optional.ofNullable(req.getHeader("origin")).orElse("");  // example - origin = http://localhost:8888
+        String referer = Optional.ofNullable(req.getHeader("Referer")).orElse("");  // example - referer = http://localhost:8888/dashboard
+        String path = Optional.ofNullable(req.getServletPath()).orElse(""); // example - path = /chemical/file/image/search/by-dtxsid/DTXSID7020182
+
+        String refererdHost;
+        if(!referer.isEmpty()){
+            refererdHost = "https://" + referer.split("/")[2];  // example - referredHost = localhost:8888
+        }else{
+            refererdHost = ""; //"https://" + req.getHeader("Referer").split("/")[2];  // example - referredHost = localhost:8888
+        }
+
+        log.debug("method = {}, origin = {}, referer ={}, refererdHost = {}, path={} ",method, origin, referer, refererdHost, path);
+
+        // if chemical/file path - allow access to images without any api key
+        if(path.contains("/chemical/file/")){
+            log.debug("skipping api-key check");
+            return false;
+        }
+
+//        if(method.equalsIgnoreCase("OPTIONS") || approvedOrigin(origin) || approvedOrigin(refererdHost))
+        if(approvedOrigin(origin) || approvedOrigin(refererdHost))
+            return false;
+        else
+            return true;
+    }
+
+    private boolean approvedOrigin(String origin) {
+
+        return origin != null && approvedOriginStore.containsKey(origin);
+    }
+
+
+    private String getApiKeyFromQueryParam(String query) {
 
         // an example -  format=svg&x-api-key=f1d96bdd-223a-434e-b1c0-af373a59a19e
 
@@ -93,7 +168,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
             for(String param: params){
                 int idx = param.indexOf("=");
                 if(param.substring(0,idx).equalsIgnoreCase(keyName)){
-                    return URLDecoder.decode(param.substring(idx + 1),"UTF-8");
+                    return URLDecoder.decode(param.substring(idx + 1), StandardCharsets.UTF_8);
                 }
             }
         }
@@ -104,7 +179,7 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
         // Get apikey from the http header
         //String key = req.getHeader(keyName) == null ? "" : req.getHeader(keyName);
 
-        if(key == null || key.equals("")){
+        if(key == null || key.isEmpty()){
             log.debug("Custom http  header {} not found", keyName);
         }
 
@@ -113,11 +188,10 @@ public class ApiKeyRequestFilter extends GenericFilterBean {
 
     private void returnErrorMsg(ServletResponse servletResponse, String key) throws IOException {
         HttpServletResponse resp = (HttpServletResponse) servletResponse;
-        String error = "Invalid API KEY";
 
         AuthorizationProblem problem;
 
-        if(key == null || key.equals("")){
+        if(key == null || key.isEmpty()){
             // header is missing
             problem = AuthorizationProblem.builder()
                     .title("API Header Not Found")
